remove absolute ref

--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -71,7 +71,7 @@
 
 <Virtualhost *:80>
     ServerName worth-the-weight.lan
-    DocumentRoot /users/ramos/www/worth-the-weight/wtw.paxperscientiam.com
+    DocumentRoot ${HOME}/www/worth-the-weight/wtw.paxperscientiam.com
 </Virtualhost>
 
 
