--- a/httpd.conf
+++ b/httpd.conf
@@ -16,7 +16,7 @@ LoadModule info_module ${MODULE_PREFIX}/mod_info.so
 LoadModule vhost_alias_module ${MODULE_PREFIX}/mod_vhost_alias.so
 LoadModule userdir_module ${MODULE_PREFIX}/mod_userdir.so
 
-Define HTTPD_DOCUMENT_ROOT /users/ramos/www
+Define HTTPD_DOCUMENT_ROOT ${HOME}/www
 Define HTTPD_LOG_ROOT /usr/local/logs/apache2
 Define PHP_ROOT ${HOME}/server-config/phpini.d
 
