make manual optional

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,5 @@
 # Local access to the Apache HTTP Server Manual
-Include etc/apache2/extra/httpd-manual.conf
+IncludeOptional etc/apache2/extra/httpd-manual.conf
 
 
 #apple
